--- a/index.html
+++ b/index.html
@@ -1,7 +1,152 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Cloud Edge Conitnuum Workshop (CEC'23)</h1>
-<p>Coming soon.</p>
-</body>
-</html>
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>CEC 2023 Workshop</title>
+
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="./assets/materialize.min.css">
+
+<style></style><style></style></head>
+
+  <style>
+    body {
+      font-family: Calibri, sans-serif;
+      margin: 0;
+    }
+
+    html {
+      box-sizing: border-box;
+    }
+
+    table,
+    td,
+    th {
+      border: 1px solid black;
+    }
+
+    table {
+      width: 40%;
+      border-collapse: collapse;
+    }
+	
+    .wrapper {
+      display: grid;
+      grid-template-columns:minmax(250px, 50%);
+      grid-gap: 2px;
+    }
+
+    .box {
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      border-radius: 15px;
+      background-color: white;
+      padding: 20px;
+    }
+
+    *,
+    *:before,
+    *:after {
+      box-sizing: inherit;
+    }
+
+    .piccolumn {
+      float: left;
+      width: 45%;
+    }
+
+    .piccolumn2 {
+      float: left;
+      width: 40%
+    }
+
+    .column {
+      float: left;
+      width: 70%;
+    }
+
+    .cards {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+
+    .card {
+      flex: 0 1 24%;
+      margin: 8px;
+      padding: 10px;
+      border-radius: 25px;
+    }
+
+    .card2 {
+      padding: 1px;
+    }
+
+    .about-section {
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      margin: 10px;
+      padding: 20px;
+      text-align: center;
+      background-color: darkblue;
+      color: white;
+      font-weight: 900;
+      border-radius: 15px;
+    }
+
+    .pagebody {
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      margin: 10px;
+      padding: 20px;
+      font-size: 18px;
+      text-align: justify;
+    }
+
+    .container {
+      padding: 0px;
+      text-align: justify;
+    }
+
+    .container::after,
+    .row::after {
+      content: "";
+      clear: both;
+      display: table;
+    }
+
+    .title {
+      color: grey;
+    }
+
+    .button {
+      border: none;
+      outline: 0;
+      display: inline-block;
+      padding: 8px;
+      color: white;
+      background-color: #000;
+      text-align: center;
+      cursor: pointer;
+      width: 100%;
+    }
+
+    .button:hover {
+      background-color: #555;
+    }
+
+    @media screen and (max-width: 650px) {
+      .column {
+        width: 100%;
+        display: block;
+      }
+    }
+  </style>
+
+  <div class="about-section">
+    <h2><b>CEC'23 - Cloud Edge Continuum Workshop</b></h2>
+  </div>
+
+  <div class="pagebody">
+    <p>Coming soon!</p>	
+  </div>
+
+</body></html>
