--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CEC 2023 Workshop</title>
-  <link rel="icon" type="image/x-icon" href="./assets/cec.png">
+  <link rel="icon" type="image/x-icon" sizes="16x16" href="./assets/cec.png">
 
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="./assets/materialize.min.css">
