--- a/index.html
+++ b/index.html
@@ -1,153 +1,315 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>CEC 2023 Workshop</title>
-  <link rel="icon" type="image/x-icon" sizes="16x16" href="./assets/cec.png">
+<html lang="en" class="us-EN">
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="author" content="Raúl Gracia and Ahmed Khalid">
+  <meta name="description" content="Cloud-Edge Continuum (CEC) Workshop">
+  <meta charset="UTF-8">
+  <title>CEC Workshop 2023</title>
 
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="./assets/materialize.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
+  <link rel="stylesheet" href="css/linearicons.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/magnific-popup.css">
+  <link rel="stylesheet" href="css/nice-select.css">
+  <link rel="stylesheet" href="css/animate.min.css">
+  <link rel="stylesheet" href="css/owl.carousel.css">
+  <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
 
-<style></style><style></style></head>
-
-  <style>
-    body {
-      font-family: Calibri, sans-serif;
-      margin: 0;
-    }
-
-    html {
-      box-sizing: border-box;
-    }
-
-    table,
-    td,
-    th {
-      border: 1px solid black;
-    }
-
-    table {
-      width: 40%;
-      border-collapse: collapse;
-    }
-	
-    .wrapper {
-      display: grid;
-      grid-template-columns:minmax(250px, 50%);
-      grid-gap: 2px;
-    }
-
-    .box {
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-      border-radius: 15px;
-      background-color: white;
-      padding: 20px;
-    }
-
-    *,
-    *:before,
-    *:after {
-      box-sizing: inherit;
-    }
-
-    .piccolumn {
-      float: left;
-      width: 45%;
-    }
-
-    .piccolumn2 {
-      float: left;
-      width: 40%
-    }
-
-    .column {
-      float: left;
-      width: 70%;
-    }
-
-    .cards {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-    }
-
-    .card {
-      flex: 0 1 24%;
-      margin: 8px;
-      padding: 10px;
-      border-radius: 25px;
-    }
-
-    .card2 {
-      padding: 1px;
-    }
-
-    .about-section {
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-      margin: 10px;
-      padding: 20px;
-      text-align: center;
-      background-color: darkblue;
-      color: white;
-      font-weight: 900;
-      border-radius: 15px;
-    }
-
-    .pagebody {
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-      margin: 10px;
-      padding: 20px;
-      font-size: 18px;
-      text-align: justify;
-    }
-
-    .container {
-      padding: 0px;
-      text-align: justify;
-    }
-
-    .container::after,
-    .row::after {
-      content: "";
-      clear: both;
-      display: table;
-    }
-
-    .title {
-      color: grey;
-    }
-
-    .button {
-      border: none;
-      outline: 0;
-      display: inline-block;
-      padding: 8px;
-      color: white;
-      background-color: #000;
-      text-align: center;
-      cursor: pointer;
-      width: 100%;
-    }
-
-    .button:hover {
-      background-color: #555;
-    }
-
-    @media screen and (max-width: 650px) {
-      .column {
-        width: 100%;
-        display: block;
-      }
-    }
-  </style>
-
-  <div class="about-section">
-    <h2><b>CEC'23 - Cloud Edge Continuum Workshop</b></h2>
+<header id="header">
+  <div class="container">
+    <div class="row align-items-center justify-content-between d-flex">
+      <div id="logo">
+      </div>
+      <nav id="nav-menu-container">
+        <ul class="nav-menu">
+          <li class="menu-active"><a href="index.html#home">Home</a></li>
+          <li><a href="index.html#introduction">Introduction</a></li>
+          <li><a href="index.html#topics">Topics of Interest</a></li>
+          <li><a href="index.html#dates">Important Dates</a></li>
+          <li><a href="index.html#submission">Submission Guidelines</a></li>
+          <li><a href="index.html#committee">Committees</a></li>
+          <li><a href="index.html#program">Program</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
+          <li><a href="index.html#sponsor">Sponsors</a></li>
+        </ul>
+      </nav>
+    </div>
   </div>
+</header>
 
-  <div class="pagebody">
-    <p>Coming soon!</p>	
+
+<section class="banner-area relative" id="home">
+  <div class="overlay overlay-bg"></div>
+  <div class="container">
+    <div class="row fullscreen d-flex align-items-center justify-content-center">
+      <div class="banner-content col-lg-9 col-md-12">
+        <h6>Cloud-Edge Continuum (CEC) Workshop</h6>
+        <br>
+        <h1 class="text-white">
+          CEC Workshop 2023
+        </h1>
+        <h4 class="text-white">
+          Organized by: IEEE ICNP'23 - The 31st IEEE International Conference on Network Protocols
+        </h4>
+        <br>
+        <br>
+        <h4><span class="lnr lnr-calendar-full"></span>October 10th, 2023</h4>
+        <h4><span class="lnr lnr-map"></span>  <a href="https://icnp23.cs.ucr.edu/" target="_blank">Co-located with IEEE ICNP'23 - Reykjavik, Iceland</a> </h4>
+      </div>
+    </div>
   </div>
+</section>
 
-</body></html>
+<section class="sample-text-area" id="introduction">
+  <div class="container">
+    <h3 class="text-heading">Introduction</h3>
+    <p class="sample-text">
+      The Cloud-Edge Continuum is a new hyper-distributed computing paradigm that aims at seamlessly interconnecting
+      and abstracting the computing power and storage capacity of the Cloud with the data processing capabilities
+      of edge devices, IoT devices, and sensors. Intelligently balancing tasks in a continuum enables faster response
+      times, lower latency, and more efficient use of network bandwidth. However, efficiently managing extremely
+      heterogeneous Cloud and Edge resources is a pressing concern in real-world large-scale implementations.
+      Such heterogeneity refers to differences in network capabilities, processing power, software stack, APIs,
+      and security protocols across the Cloud-Edge Continuum infrastructure. This raises significant challenges
+      for the network community to develop new and efficient protocols and communication services. Given the potential
+      benefits of the Cloud-Edge Continuum, it is important to explore the current state-of-the-art research and
+      identify the challenges and opportunities in this area.
+    </p>
+    <p class="sample-text">
+      The Cloud-Edge Continuum (CEC) workshop aims to bring together researchers and practitioners from academia and
+      industry to discuss the latest research, trends, and challenges in ecosystems and environments based on Cloud-Edge
+      Continuum paradigm. The primary goal of this workshop is to foster collaboration and exchange of ideas among
+      researchers and stakeholders. The workshop can provide a platform for participants to share their experiences,
+      best practices, case studies, and to identify emerging research areas and potential solutions to existing
+      challenges. By bringing together experts from different domains, the CEC workshop also aims to provide insights
+      into how Cloud-Edge Continuum can be applied in various fields, such as healthcare, transportation, smart cities,
+      and manufacturing.
+    </p>
+
+    <h3 class="text-heading" id="topics">Topics of Interest</h3>
+    <p>
+      We welcome submissions of original research, work-in-progress, and proof of concepts describing original ideas
+      and presenting new directions. We invite submissions covering the aspects around the design, development, and
+      evaluation of architectures, technologies, and applications for the Cloud-Edge Continuum, including but not
+      limited to:
+    <ul class="unordered-list">
+    <li>Network optimization and interoperable protocols for the Cloud-Edge Continuum</li>
+    <li>Novel system architectures and hardware designs in the Cloud-Edge Continuum</li>
+    <li>Network security, data privacy, confidence, and trust in the Cloud-Edge Continuum</li>
+    <li>Serverless services and models for the Cloud-Edge Continuum</li>
+    <li>Mobile computing and distributed autonomy in the Cloud-Edge Continuum</li>
+    <li>AI-enabled resource allocation, federated learning, and swarm intelligence in the Cloud-Edge Continuum</li>
+    <li>QoS provisioning, QoE, and SLA management in the Cloud-Edge Continuum</li>
+    <li>Sustainable, energy and carbon efficient connectivity in the Cloud-Edge Continuum</li>
+    <li>Next generation smart use-cases enabled by the Cloud-Edge Continuum</li>
+  </ul>
+    </p>
+
+  </div>
+</section>
+
+<section class="price-area section-gap" id="dates">
+  <div class="container">
+    <div class="row d-flex justify-content-center">
+      <div class="menu-content pb-70 col-lg-8">
+        <div class="title text-center">
+          <h1 class="mb-10">Important Dates</h1>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-3 col-md-6 single-price">
+        <div class="top-part">
+          <h1 class="package-no">01</h1>
+          <h4>Abstract Registration</h4>
+          <p>July 23, 2023 (8:00 p.m. EDT)</p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 single-price">
+        <div class="top-part">
+          <h1 class="package-no">02</h1>
+          <h4>Paper Submission</h4>
+          <p>July 31, 2023 (8:00 p.m. EDT)</p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 single-price">
+        <div class="top-part">
+          <h1 class="package-no">03</h1>
+          <h4>Notification of acceptance</h4>
+          <p>August 31, 2023</p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 single-price">
+        <div class="top-part">
+          <h1 class="package-no">04</h1>
+          <h4>Camera ready version</h4>
+          <p>September 8, 2023</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="sample-text-area" id="submission">
+  <div class="container">
+
+    <h3 class="text-heading">Submission Guidelines</h3>
+    <p>Submissions must be original, unpublished work, and not under consideration at another conference or journal.
+      Paper submissions should adhere to the IEEE Conference formatting requirements with double column and the
+      font size must be 10 points. The length of the final paper with all its content (including references) must
+      not exceed 6 pages. Papers must include author’s names and affiliations for single-blind peer reviewing by the
+      PC. Authors of accepted papers are expected to present their papers at the workshop.
+      The IEEE template available here.
+    </p>
+    <p>
+      Please submit your paper using workshop’s CEC2023 HotCRP link.
+    </p>
+  </div>
+</section>
+
+
+<section class="sample-text-area" id="committee">
+  <div class="container">
+    <h3 class="text-heading">Committees</h3>
+    <p class="sample-text">
+      <h5 class="text-gray">Workshop Chairs</h5>
+      <ul class="unordered-list">
+      <li>Ahmed Khalid (Dell Technologies, Ireland)</li>
+      <li>Pedro García-López (Universitat Rovira i Virgili, Spain)</li>
+      <li>Filippo Cugini (CNIT, Italy)</li>
+      </ul>
+    </p>
+
+    <p class="sample-text">
+    <h5 class="text-gray">Steering Committee</h5>
+    <ul class="unordered-list">
+    <li>Cormac J. Sreenan (University College Cork, Ireland)</li>
+    <li>Raúl Gracia-Tinedo (Dell Technologies, Spain)</li>
+    </ul>
+    </p>
+
+    <p class="sample-text">
+    <h5 class="text-gray">Publicity Chairs</h5>
+    <ul class="unordered-list">
+    <li>Lovorko Maric (MicroDigital, Croatia)</li>
+    <li>Sean Ahearne (Dell Technologies, Ireland)</li>
+    </ul>
+    </p>
+
+    <p class="sample-text">
+      <h5 class="text-gray">Technical Program Committee</h5>
+      <ul class="unordered-list">
+      <li>Ahmed Zahran (University College Cork, Ireland)</li>
+      <li>Aidan O’Mahony (Dell Technologies, Ireland)</li>
+      <li>Alan Barnett (Dell Technologies, Ireland)</li>
+      <li>Angelos Antonopoulos (NearBy Computing, Spain)</li>
+      <li>Aristotelis Kretsis (National Technical University of Athens, Greece)</li>
+      <li>Bernard Metzler (IBM, Switzerland)</li>
+      <li>Damu Ding (University of Oxford, UK)</li>
+      <li>Danh Le Phuoc (Technical University Dresden, Germany)</li>
+      <li>Dave Raggett (W3C, UK)</li>
+      <li>David Bowden (Dell Technologies, Ireland)</li>
+      <li>Edgard Marx (Eccenca, Germany)</li>
+      <li>Flavio Junqueira (Dell Technologies, Spain)</li>
+      <li>Iisakki Kosonen (Aalto University, Finland)</li>
+      <li>Javad Chamanara (Leibniz University Hannover, Germany)</li>
+      <li>Juan Jose Vegas Olmos (Nvidia, Germany)</li>
+      <li>Luca Valcarenghi (Scuola Superiore Sant'Anna, Italy)</li>
+      <li>Marc Sánchez-Artigas (Universitat Rovira i Virgili, Spain)</li>
+      <li>Melanie Schranz (Lakeside Labs, Austria)</li>
+      <li>Michela Bertoletto (University College Dublin, Ireland)</li>
+      <li>Mustafa Al-Bado (Dell Technologies, Ireland)</li>
+      <li>Panagiotis Kokkinos (National Technical University of Athens, Greece)</li>
+      <li>Panagiotis Oikonomou (University of Thessaly, Greece)</li>
+      <li>Peter Pietzuch (Imperial College London, UK)</li>
+      <li>Raja Appuswamy (Eurecom, France)</li>
+      <li>Simon Rommel (Eindhoven University, Netherlands)</li>
+      <li>Stefano Paraboschi (University Bergamo, Italy)</li>
+      <li>Valerio Frascolla (Intel, Germany)</li>
+    </ul>
+    </p>
+
+  </div>
+</section>
+
+
+
+
+<section class="sample-text-area" id="program">
+  <div class="container">
+
+    <h3 class="text-heading">Program</h3>
+    <p>Coming soon!</p>
+  </div>
+</section>
+
+<section class="sample-text-area" id="contact">
+  <div class="container">
+    <h3 class="text-heading">Contact</h3>
+    <div class="row">
+      <div class="col-md-10">
+        <p>
+          For any question or doubt, please reach us at <a href="mailto:Ahmed.Khalid@dell.com">Ahmed.Khalid@dell.com</a></p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="sample-text-area" id="sponsor">
+  <div class="container">
+    <h3 class="text-heading">Sponsors</h3>
+    <div class="row">
+
+      <div class="col-md-10">
+        <p>
+          This workshop is sponsored by:
+        </p>
+      </div>
+
+      <div class="sample-text-area">
+        <center>
+          <a href="https://dell.com" target="_blank"><img src="img/dell_logo.png" alt="" height="155"></a> &nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="https://icnp23.cs.ucr.edu" target="_blank"><img src="img/icnp.jpg" alt="" height="145"></a>
+          <br><br>
+          <a href="https://neardata.eu" target="_blank"><img src="img/NEARDATA_Logo_transp.png" alt="" height="145"></a>&nbsp;&nbsp;
+          <a href="https://cloudskin.eu" target="_blank"><img src="img/CLOUDSKIN_logo_trans.png" alt="" height="160"></a>
+          <br><br>
+          <a href="https://glaciation-project.eu" target="_blank"><img src="img/glaciation_logo.png" alt="" height="80"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="https://braine-project.eu" target="_blank"><img src="img/braine_logo.png" alt="" height="150"></a>
+          <br><br>
+          <a href="https://silvanus-project.eu" target="_blank"><img src="img/silvanus-logo.png" alt="" height="110"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="https://www.cleverproject.eu/" target="_blank"><img src="img/clever-logo.png" alt="" height="110"></a>
+          <br><br>
+          <a href="https://www.smart-edge.eu" target="_blank"><img src="img/smartedge-logo.png" alt="" height="120"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="https://commission.europa.eu" target="_blank"><img src="img/eu-logo.png" alt="" height="120"></a>
+        </center>
+      </div>
+
+    </div>
+  </div>
+</section>
+<footer class="footer-area">
+</footer>
+
+<script src="js/vendor/jquery-2.2.4.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="js/vendor/bootstrap.min.js"></script>
+<script src="js/easing.min.js"></script>
+<script src="js/hoverIntent.js"></script>
+<script src="js/superfish.min.js"></script>
+<script src="js/jquery.ajaxchimp.min.js"></script>
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/jquery.sticky.js"></script>
+<script src="js/jquery.nice-select.min.js"></script>
+<script src="js/parallax.min.js"></script>
+<script src="js/main.js"></script>
+</body>
+</html>
+
+
