--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li><a href="index.html#committee">Committees</a></li>
           <li><a href="index.html#program">Program</a></li>
           <li><a href="index.html#contact">Contact</a></li>
-          <li><a href="index.html#sponsor">Sponsors</a></li>
+          <li><a href="index.html#sponsor">Supporters</a></li>
         </ul>
       </nav>
     </div>
@@ -262,18 +262,17 @@
 
 <section class="sample-text-area" id="sponsor">
   <div class="container">
-    <h3 class="text-heading">Sponsors</h3>
+    <h3 class="text-heading">Supporters</h3>
     <div class="row">
 
       <div class="col-md-10">
         <p>
-          This workshop is sponsored by:
+          This workshop is supported by:
         </p>
       </div>
 
       <div class="sample-text-area">
         <center>
-          <a href="https://dell.com" target="_blank"><img src="img/dell_logo.png" alt="" height="155"></a> &nbsp;&nbsp;&nbsp;&nbsp;
           <a href="https://icnp23.cs.ucr.edu" target="_blank"><img src="img/icnp.jpg" alt="" height="145"></a>
           <br><br>
           <a href="https://neardata.eu" target="_blank"><img src="img/NEARDATA_Logo_transp.png" alt="" height="145"></a>&nbsp;&nbsp;
@@ -311,5 +310,4 @@
 <script src="js/main.js"></script>
 </body>
 </html>
-
 
