Added links for paper template and submission site.
Signed-off-by: Gracia <raul.gracia@dell.com>

--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
       font size must be 10 points. The length of the final paper with all its content (including references) must
       not exceed 6 pages. Papers must include author’s names and affiliations for single-blind peer reviewing by the
       PC. Authors of accepted papers are expected to present their papers at the workshop.
-      The IEEE template available here.
+      The IEEE template <a href="https://www.ieee.org/conferences/publishing/templates.html" target="_blank">available here</a>.
     </p>
     <p>
-      Please submit your paper using workshop’s CEC2023 HotCRP link.
+      Please submit your paper using workshop's <a href="https://cec23.hotcrp.com/" target="_blank">CEC2023 HotCRP link</a>.
     </p>
   </div>
 </section>
