--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Cloud-Edge Continuum (CEC) Workshop">
   <meta charset="UTF-8">
   <title>CEC Workshop 2023</title>
+  <link rel="icon" href="img/cec.png" type="image/icon type">
 
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
   <link rel="stylesheet" href="css/linearicons.css">
