--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         <h4 class="text-white">
           Organized by: IEEE ICNP'23 - The 31st IEEE International Conference on Network Protocols
         </h4>
+        <h5 class="text-white">
+          Supported by EU Commission
+        </h5>
         <br>
         <br>
         <h4><span class="lnr lnr-calendar-full"></span>October 10th, 2023</h4>
@@ -126,28 +129,28 @@
         <div class="top-part">
           <h1 class="package-no">01</h1>
           <h4>Abstract Registration</h4>
-          <p>July 23, 2023 (8:00 p.m. EDT)</p>
+          <p>July 1, 2023 (8:00 p.m. CET)</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 single-price">
         <div class="top-part">
           <h1 class="package-no">02</h1>
           <h4>Paper Submission</h4>
-          <p>July 31, 2023 (8:00 p.m. EDT)</p>
+          <p>July 7, 2023 (8:00 p.m. CET)</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 single-price">
         <div class="top-part">
           <h1 class="package-no">03</h1>
           <h4>Notification of acceptance</h4>
-          <p>August 31, 2023</p>
+          <p>August 21, 2023</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 single-price">
         <div class="top-part">
           <h1 class="package-no">04</h1>
           <h4>Camera ready version</h4>
-          <p>September 8, 2023</p>
+          <p>August 31, 2023</p>
         </div>
       </div>
     </div>
@@ -167,7 +170,7 @@
       The IEEE template <a href="https://www.ieee.org/conferences/publishing/templates.html" target="_blank">available here</a>.
     </p>
     <p>
-      Please submit your paper using workshop's <a href="https://cec23.hotcrp.com/" target="_blank">CEC2023 HotCRP link</a>.
+      Please submit your paper using workshop's <a href="https://cec23.hotcrp.com/" target="_blank">CEC'23 HotCRP link</a>.
     </p>
   </div>
 </section>
@@ -189,6 +192,7 @@
     <h5 class="text-gray">Steering Committee</h5>
     <ul class="unordered-list">
     <li>Cormac J. Sreenan (University College Cork, Ireland)</li>
+    <li>Pierangela Samarati (University of Milan, Italy)</li>
     <li>Raúl Gracia-Tinedo (Dell Technologies, Spain)</li>
     </ul>
     </p>
