--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <div class="row">
       <div class="col-md-10">
         <p>
-          For any question or doubt, please reach us at <a href="mailto:Ahmed.Khalid@dell.com">Ahmed.Khalid@dell.com</a></p>
+          For any question or doubt, please reach us at <a href="mailto:Ahmed.Khalid@dell.com">Ahmed.Khalid@dell.com</a> and <a href="mailto:raul.gracia@dell.com">Raul.Gracia@dell.com</a>.</p>
       </div>
     </div>
   </div>
