--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <li>Luca Valcarenghi (Scuola Superiore Sant'Anna, Italy)</li>
       <li>Marc Sánchez-Artigas (Universitat Rovira i Virgili, Spain)</li>
       <li>Melanie Schranz (Lakeside Labs, Austria)</li>
-      <li>Michela Bertoletto (University College Dublin, Ireland)</li>
+      <li>Michela Bertolotto (University College Dublin, Ireland)</li>
       <li>Mustafa Al-Bado (Dell Technologies, Ireland)</li>
       <li>Panagiotis Kokkinos (National Technical University of Athens, Greece)</li>
       <li>Panagiotis Oikonomou (University of Thessaly, Greece)</li>
