--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html#home">Home</a></li>
-          <li><a href="index.html#introduction">Introduction</a></li>
+          <li><a href="index.html#introduction">Call for Papers</a></li>
           <li><a href="index.html#topics">Topics of Interest</a></li>
           <li><a href="index.html#dates">Important Dates</a></li>
           <li><a href="index.html#submission">Submission Guidelines</a></li>
@@ -70,7 +70,7 @@
 
 <section class="sample-text-area" id="introduction">
   <div class="container">
-    <h3 class="text-heading">Introduction</h3>
+    <h3 class="text-heading">Call for Papers</h3>
     <p class="sample-text">
       The Cloud-Edge Continuum is a new hyper-distributed computing paradigm that aims at seamlessly interconnecting
       and abstracting the computing power and storage capacity of the Cloud with the data processing capabilities
