--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html#home">Home</a></li>
-          <li><a href="index.html#introduction">Call for Papers</a></li>
+          <li><a href="index.html#cfp">Call for Papers</a></li>
           <li><a href="index.html#topics">Topics of Interest</a></li>
           <li><a href="index.html#dates">Important Dates</a></li>
           <li><a href="index.html#submission">Submission Guidelines</a></li>
           <li><a href="index.html#committee">Committees</a></li>
           <li><a href="index.html#program">Program</a></li>
           <li><a href="index.html#contact">Contact</a></li>
-          <li><a href="index.html#sponsor">Supporters</a></li>
+          <li><a href="index.html#supporter">Supporters</a></li>
         </ul>
       </nav>
     </div>
@@ -68,7 +68,7 @@
   </div>
 </section>
 
-<section class="sample-text-area" id="introduction">
+<section class="sample-text-area" id="cfp">
   <div class="container">
     <h3 class="text-heading">Call for Papers</h3>
     <p class="sample-text">
@@ -265,7 +265,7 @@
   </div>
 </section>
 
-<section class="sample-text-area" id="sponsor">
+<section class="sample-text-area" id="supporter">
   <div class="container">
     <h3 class="text-heading">Supporters</h3>
     <div class="row">
@@ -315,4 +315,3 @@
 <script src="js/main.js"></script>
 </body>
 </html>
-
