--- a/index.html
+++ b/index.html
@@ -278,18 +278,19 @@
 
       <div class="sample-text-area">
         <center>
-          <a href="https://icnp23.cs.ucr.edu" target="_blank"><img src="img/icnp.jpg" alt="" height="145"></a>
-          <br><br>
+          <a href="https://icnp23.cs.ucr.edu" target="_blank"><img src="img/icnp.jpg" alt="" height="145"></a>&nbsp;&nbsp;
+          <a href="https://commission.europa.eu" target="_blank"><img src="img/eu-logo.png" alt="" height="120"></a>
+          <br><br><br>
           <a href="https://neardata.eu" target="_blank"><img src="img/NEARDATA_Logo_transp.png" alt="" height="125"></a>&nbsp;&nbsp;
           <a href="https://cloudskin.eu" target="_blank"><img src="img/CLOUDSKIN_logo_trans.png" alt="" height="140"></a>&nbsp;&nbsp;
           <a href="https://www.cleverproject.eu/" target="_blank"><img src="img/clever-logo.png" alt="" height="140"></a>
-          <br><br>
-          <a href="https://glaciation-project.eu" target="_blank"><img src="img/glaciation_logo.png" alt="" height="60"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <br><br><br>
           <a href="https://braine-project.eu" target="_blank"><img src="img/braine_logo.png" alt="" height="150"></a>&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="https://glaciation-project.eu" target="_blank"><img src="img/glaciation_logo.png" alt="" height="60"></a>&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="https://www.smart-edge.eu" target="_blank"><img src="img/smartedge-logo.png" alt="" height="120"></a>
-          <br><br>
+          <br><br><br>
           <a href="https://silvanus-project.eu" target="_blank"><img src="img/silvanus-logo.png" alt="" height="110"></a>&nbsp;&nbsp;&nbsp;&nbsp;
-          <a href="https://commission.europa.eu" target="_blank"><img src="img/eu-logo.png" alt="" height="120"></a>
+          <a href="https://www.cameoplatform.ie/" target="_blank"><img src="img/CAMEO_RGB.png" alt="" height="120"></a>
         </center>
       </div>
 
