--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
       <li>David Bowden (Dell Technologies, Ireland)</li>
       <li>Edgard Marx (Eccenca, Germany)</li>
       <li>Flavio Junqueira (Dell Technologies, Spain)</li>
+      <li>Hassan Mehmood (University of Oulu, Finland)</li>
       <li>Iisakki Kosonen (Aalto University, Finland)</li>
       <li>Javad Chamanara (Leibniz University Hannover, Germany)</li>
       <li>Juan Jose Vegas Olmos (Nvidia, Germany)</li>
