--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@
         <div class="top-part">
           <h1 class="package-no">01</h1>
           <h4>Abstract Registration</h4>
-          <p><s>July 1, 2023</s> July 17, 2023 (8:00 p.m. CET)</p>
+          <p><s>July 1</s> July 17, 2023 (8:00 p.m. CET)</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 single-price">
         <div class="top-part">
           <h1 class="package-no">02</h1>
           <h4>Paper Submission</h4>
-          <p><s>July 7, 2023</s> July 17, 2023(8:00 p.m. CET)</p>
+          <p><s>July 7</s> July 17, 2023(8:00 p.m. CET)</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 single-price">
