--- a/index.html
+++ b/index.html
@@ -279,7 +279,8 @@
 
       <div class="sample-text-area">
         <center>
-          <a href="https://icnp23.cs.ucr.edu" target="_blank"><img src="img/icnp.jpg" alt="" height="145"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="https://icnp23.cs.ucr.edu" target="_blank"><img src="img/icnp.jpg" alt="" height="120"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="https://www.dell.com" target="_blank"><img src="img/dell_logo.png" alt="" height="160"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="https://commission.europa.eu" target="_blank"><img src="img/eu-logo.png" alt="" height="120"></a>
           <br><br><br>
           <a href="https://neardata.eu" target="_blank"><img src="img/NEARDATA_Logo_transp.png" alt="" height="125"></a>&nbsp;&nbsp;
