--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           Organized by: IEEE ICNP'23 - The 31st IEEE International Conference on Network Protocols
         </h4>
         <h5 class="text-white">
-          Supported by EU Commission
+          Supported by EU Commission and Dell Technologies
         </h5>
         <br>
         <br>
