--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html#home">Home</a></li>
           <li><a href="index.html#cfp">Call for Papers</a></li>
-          <li><a href="index.html#topics">Topics of Interest</a></li>
           <li><a href="index.html#dates">Important Dates</a></li>
           <li><a href="index.html#submission">Submission Guidelines</a></li>
           <li><a href="index.html#committee">Committees</a></li>
+          <li><a href="index.html#posters">Posters & Keynotes</a></li>
           <li><a href="index.html#program">Program</a></li>
           <li><a href="index.html#contact">Contact</a></li>
           <li><a href="index.html#supporter">Supporters</a></li>
@@ -244,6 +244,21 @@
 </section>
 
 
+
+<section class="sample-text-area" id="posters">
+  <div class="container">
+    <h3 class="text-heading">Posters</h3>
+    <p class="sample-text">
+      We invite multiple EU projects working in the area of Cloud-Edge Continuum to present a poster in a dedicated poster session
+      during the CEC'23 workshop. The goal of this session is to allow knowledge sharing among EU projects active in the
+      Cloud-Edge Continuum research and foster collaboration among EU organizations from industry and academia. This session
+      will help stimulate conversations and discussions on challenges and preliminary solutions in Cloud-Edge Continuum with
+      real-world use-cases.
+      Note: As these posters are by invitation and not peer-reviewed, they will not appear in IEEE proceedings. Get in touch with
+      the CEC'23 organizing committee, if you are interested to join the workshop and present a poster on your EU project.
+    </p>
+  </div>
+</section>
 
 
 <section class="sample-text-area" id="program">
