--- a/index.html
+++ b/index.html
@@ -251,11 +251,13 @@
     <p class="sample-text">
       We invite multiple EU projects working in the area of Cloud-Edge Continuum to present a poster in a dedicated poster session
       during the CEC'23 workshop. The goal of this session is to allow knowledge sharing among EU projects active in the
-      Cloud-Edge Continuum research and foster collaboration among EU organizations from industry and academia. This session
-      will help stimulate conversations and discussions on challenges and preliminary solutions in Cloud-Edge Continuum with
-      real-world use-cases.
-      Note: As these posters are by invitation and not peer-reviewed, they will not appear in IEEE proceedings. Get in touch with
-      the CEC'23 organizing committee, if you are interested to join the workshop and present a poster on your EU project.
+      Cloud-Edge Continuum research and foster collaboration among EU researchers and EU organizations from industry and academia. 
+      This session will help stimulate conversations and discussions on challenges and preliminary solutions in Cloud-Edge Continuum
+      with real-world use-cases.
+      </p>
+    <p class="sample-text">
+      <b>Note: As these posters are by invitation and not peer-reviewed, they will not appear in IEEE proceedings. Get in touch with
+      the CEC'23 organizing committee, if you are interested in joining the workshop and presenting a poster on your EU project.</b>
     </p>
   </div>
 </section>
