--- a/index.html
+++ b/index.html
@@ -259,6 +259,15 @@
       <b>Note: As these posters are by invitation and not peer-reviewed, they will not appear in IEEE proceedings. Get in touch with
       the CEC'23 organizing committee, if you are interested in joining the workshop and presenting a poster on your EU project.</b>
     </p>
+    <h3 class="text-heading">Keynote Speakers</h3>
+    <h4 class="text-heading">Keynote Speakers</h4>
+    <p class="sample-text">
+    Steve is a Fellow and Vice President of Data Innovation and Strategy in the Dell Technologies Office of the CTO. He is a long-time
+    inventor in high tech, having filed over 400 patent applications with the USPTO. His innovations and inventions have generated tens 
+    of billions of dollars in global customer purchases. His current focus is the trustworthy processing of edge data. He co-founded
+    Project Alvarium, an open-source platform for valuing trustworthy data in a data confidence fabric (DCF).
+    </p>
+
   </div>
 </section>
 
