--- a/index.html
+++ b/index.html
@@ -260,12 +260,21 @@
       the CEC'23 organizing committee, if you are interested in joining the workshop and presenting a poster on your EU project.</b>
     </p>
     <h3 class="text-heading">Keynote Speakers</h3>
-    <h4 class="text-heading">Keynote Speakers</h4>
+    <h5 class="text-heading">Steve J. Todd</h5>
     <p class="sample-text">
     Steve is a Fellow and Vice President of Data Innovation and Strategy in the Dell Technologies Office of the CTO. He is a long-time
     inventor in high tech, having filed over 400 patent applications with the USPTO. His innovations and inventions have generated tens 
     of billions of dollars in global customer purchases. His current focus is the trustworthy processing of edge data. He co-founded
     Project Alvarium, an open-source platform for valuing trustworthy data in a data confidence fabric (DCF).
+    </p>
+    <h5 class="text-heading">Cormac J. Sreenan</h5>
+    <p class="sample-text">
+      Cormac is a Full Professor of Computer Science at University College Cork (UCC) in Ireland, where he has also served as Head of School.
+      Prior to joining UCC in 1999 he was on the research staff at AT&T Labs-Research, Florham Park, NJ, USA and at Bell Labs, Murray Hill, NJ, USA. 
+      At UCC he directs the Mobile & Internet Systems Laboratory (MISL), with research activity in multimedia and wireless networking and systems.
+      Prof. Cormac is a Science Foundation Ireland Principal Investigator and has published over 200 peer-reviewed papers, serving on several
+      ACM/IEEE journal editorial boards. His research interests include wireless sensor networks, next generation computer networks, wireless
+      mesh networks, multimedia networking & systems.
     </p>
 
   </div>
