--- a/index.html
+++ b/index.html
@@ -259,13 +259,17 @@
       <b>Note: As these posters are by invitation and not peer-reviewed, they will not appear in IEEE proceedings. Get in touch with
       the CEC'23 organizing committee, if you are interested in joining the workshop and presenting a poster on your EU project.</b>
     </p>
+  </div>
+  <div class="container">
     <h3 class="text-heading">Keynote Speakers</h3>
     <h5 class="text-heading">Steve J. Todd</h5>
     <p class="sample-text">
     Steve is a Fellow and Vice President of Data Innovation and Strategy in the Dell Technologies Office of the CTO. He is a long-time
     inventor in high tech, having filed over 400 patent applications with the USPTO. His innovations and inventions have generated tens 
     of billions of dollars in global customer purchases. His current focus is the trustworthy processing of edge data. He co-founded
-    Project Alvarium, an open-source platform for valuing trustworthy data in a data confidence fabric (DCF).
+    Project Alvarium, an open-source platform for valuing trustworthy data in a data confidence fabric (DCF).  He is driving the exploration
+    of distributed ledger technology with partners such as IOTA and Hedera. Steve earned Bachelor’s and Master’s Degrees in Computer Science
+    from the University of New Hampshire.
     </p>
     <h5 class="text-heading">Cormac J. Sreenan</h5>
     <p class="sample-text">
