--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
   </div>
   <div class="container">
     <h3 class="text-heading">Keynote Speakers</h3>
-    <h5 class="text-heading">Steve J. Todd</h5>
+    <h5 class="text-gray">Steve J. Todd</h5>
     <p class="sample-text">
     Steve is a Fellow and Vice President of Data Innovation and Strategy in the Dell Technologies Office of the CTO. He is a long-time
     inventor in high tech, having filed over 400 patent applications with the USPTO. His innovations and inventions have generated tens 
@@ -271,7 +271,7 @@
     of distributed ledger technology with partners such as IOTA and Hedera. Steve earned Bachelor’s and Master’s Degrees in Computer Science
     from the University of New Hampshire.
     </p>
-    <h5 class="text-heading">Cormac J. Sreenan</h5>
+    <h5 class="text-gray">Cormac J. Sreenan</h5>
     <p class="sample-text">
       Cormac is a Full Professor of Computer Science at University College Cork (UCC) in Ireland, where he has also served as Head of School.
       Prior to joining UCC in 1999 he was on the research staff at AT&T Labs-Research, Florham Park, NJ, USA and at Bell Labs, Murray Hill, NJ, USA. 
