--- a/index.html
+++ b/index.html
@@ -260,6 +260,8 @@
       the CEC'23 organizing committee, if you are interested in joining the workshop and presenting a poster on your EU project.</b>
     </p>
   </div>
+</section>
+  <section class="sample-text-area">
   <div class="container">
     <h3 class="text-heading">Keynote Speakers</h3>
     <h5 class="text-gray">Steve J. Todd</h5>
