--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 <section class="sample-text-area" id="program">
   <div class="container">
 
-    <h3 class="text-heading">Program</h3>
+    <h1 class="text-heading">Workshop Program</h1>
     <p>Coming soon!</p>
   </div>
 </section>
