--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 <section class="sample-text-area" id="program">
   <div class="container">
 
-    <h1 class="text-heading">Workshop Program</h1>
+    <h1  class="mb-10">Workshop Program</h1>
     <p>Coming soon!</p>
   </div>
 </section>
