--- a/index.html
+++ b/index.html
@@ -287,10 +287,15 @@
 </section>
 
 
-<section class="sample-text-area" id="program">
+<section class="price-area section-gap" id="program">
   <div class="container">
-
-    <h1  class="mb-10">Workshop Program</h1>
+    <div class="row d-flex justify-content-center">
+      <div class="menu-content pb-70 col-lg-8">
+        <div class="title text-center">
+          <h1 class="mb-10">Workshop Program</h1>
+        </div>
+      </div>
+    </div>
     <p>Coming soon!</p>
   </div>
 </section>
