--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 </section>
 
 
-<section class="price-area section-gap" id="program">
+<section class="section-gap" id="program">
   <div class="container">
     <div class="row d-flex justify-content-center">
       <div class="menu-content pb-70 col-lg-8">
@@ -296,6 +296,14 @@
         </div>
       </div>
     </div>
+	<div class="sample-text-area">
+	  <div class="menu-content pb-70 col-lg-8">
+        <div class="title text-center">
+          <h1 class="mb-10">Session 1</h1>
+        </div>
+      </div>
+    </div>
+
     <p>Coming soon!</p>
   </div>
 </section>
