--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 </section>
 
 
-<section class="section-gap" id="program">
+<section class="price-area section-gap" id="program">
   <div class="container">
     <div class="row d-flex justify-content-center">
       <div class="menu-content pb-70 col-lg-8">
