--- a/index.html
+++ b/index.html
@@ -289,22 +289,21 @@
 
 <section class="price-area section-gap" id="program">
   <div class="container">
+
     <div class="row d-flex justify-content-center">
       <div class="menu-content pb-70 col-lg-8">
         <div class="title text-center">
           <h1 class="mb-10">Workshop Program</h1>
         </div>
       </div>
+
     </div>
-	<div class="sample-text-area">
-	  <div class="menu-content pb-70 col-lg-8">
-        <div class="title text-center">
-          <h1 class="mb-10">Session 1</h1>
-        </div>
-      </div>
+	<div class="row">
+	    <h3 class="text-heading text-center">Session 1</h3>
     </div>
 
     <p>Coming soon!</p>
+
   </div>
 </section>
 
