--- a/index.html
+++ b/index.html
@@ -296,10 +296,14 @@
           <h1 class="mb-10">Workshop Program</h1>
         </div>
       </div>
-
     </div>
-	<div class="row">
-	    <h3 class="text-heading text-center">Session 1</h3>
+
+    <div class="row">
+      <div class="col-lg-3 col-md-6 single-price">
+        <div class="top-part">
+          <h4>Session 1</h4>
+        </div>
+      </div>
     </div>
 
     <p>Coming soon!</p>
