--- a/index.html
+++ b/index.html
@@ -299,10 +299,8 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-3 col-md-6 single-price">
-        <div class="top-part">
-          <h4>Session 1</h4>
-        </div>
+      <div class="pb-70 col-lg-8 text-center sample-text-area">
+          <h3>Session 1</h3>
       </div>
     </div>
 
