--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
   <div class="container">
 
     <div class="row d-flex justify-content-center">
-      <div class="menu-content pb-70 col-lg-8">
+      <div class="menu-content pb-70 col-md-8">
         <div class="title text-center">
           <h1 class="mb-10">Workshop Program</h1>
         </div>
@@ -299,8 +299,8 @@
     </div>
 
     <div class="row">
-      <div class="pb-70 col-lg-8 text-center sample-text-area">
-          <h3>Session 1</h3>
+      <div class="col-md-10 text-center sample-text-area">
+          <h2>Session 1</h2>
       </div>
     </div>
 
