--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
     </div>
 
     <div class="row">
-      <div class="col-md-10 text-center sample-text-area">
+      <div class="text-center sample-text-area">
           <h2>Session 1</h2>
       </div>
     </div>
