--- a/index.html
+++ b/index.html
@@ -289,7 +289,6 @@
 
 <section class="price-area section-gap" id="program">
   <div class="container">
-
     <div class="row d-flex justify-content-center">
       <div class="menu-content pb-70 col-md-8">
         <div class="title text-center">
@@ -297,17 +296,16 @@
         </div>
       </div>
     </div>
-
-    <div class="row">
-      <div class="text-center sample-text-area">
-          <h2>Session 1</h2>
-      </div>
-    </div>
-
-    <p>Coming soon!</p>
-
   </div>
 </section>
+
+<section class="sample-text-area">
+  <div class="container">
+    <h3 class="text-heading">9:10-10:00 AM, Session I: Keynote</h3>
+    <p class="sample-text">Session Chair: Dr. Ahmed Khalid</p>
+    <p class="sample-text">Title:         Project Alvarium and the Rise of Data Confidence Fabrics</p>
+    <p class="sample-text">Speaker:       Steve J. Todd, Fellow at Dell Technologies</p>
+  </div>
 
 <section class="sample-text-area" id="contact">
   <div class="container">
