--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
     </p>
   </div>
 </section>
-  <section class="sample-text-area">
+
+<section class="sample-text-area">
   <div class="container">
     <h3 class="text-heading">Keynote Speakers</h3>
     <h5 class="text-gray">Steve J. Todd</h5>
@@ -287,7 +288,7 @@
 </section>
 
 
-<section class="price-area section-gap" id="program">
+<section class="price-area" id="program">
   <div class="container">
     <div class="row d-flex justify-content-center">
       <div class="menu-content pb-70 col-md-8">
@@ -301,7 +302,7 @@
 
 <section class="sample-text-area">
   <div class="container">
-    <h3 class="text-heading">9:10-10:00 AM, Session I: Keynote</h3>
+    <h3 class="text-heading text-center">9:10-10:00 AM, Session I: Keynote</h3>
     <p class="sample-text">Session Chair: Dr. Ahmed Khalid</p>
     <p class="sample-text">Title:         Project Alvarium and the Rise of Data Confidence Fabrics</p>
     <p class="sample-text">Speaker:       Steve J. Todd, Fellow at Dell Technologies</p>
