--- a/index.html
+++ b/index.html
@@ -287,6 +287,8 @@
   </div>
 </section>
 
+<section class="section-gap">
+</section>
 
 <section class="price-area" id="program">
   <div class="container">
