--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
 <section class="sample-text-area">
   <div class="container">
-    <h5 class="text-heading text-center">0900-0910, Opening</h5>
+    <h5 class="text-gray text-center">0900-0910, Opening</h5>
 
     <h5 class="text-heading text-center">0910-1000, Session I: Keynote</h5>
     <p class="sample-text"><b>Session Chair</b>: Dr. Ahmed Khalid</p>
