--- a/index.html
+++ b/index.html
@@ -306,26 +306,26 @@
   <div class="container">
     <h5 class="text-gray text-center">0900-0910, Opening</h5>
 
-    <h5 class="text-heading text-center">0910-1000, Session I: Keynote</h5>
+    <h5 class="text-gray text-center">0910-1000, Session I: Keynote</h5>
     <p class="sample-text"><b>Session Chair</b>: Dr. Ahmed Khalid</p>
     <p class="sample-text"><b>Title:</b> Project Alvarium and the Rise of Data Confidence Fabrics</p>
     <p class="sample-text"><b>Speaker:</b> Steve J. Todd, Fellow at Dell Technologies</p>
 	
-	<h5 class="text-heading text-center">1000-1015, Coffee Break</h5>
+	<h5 class="text-gray text-center">1000-1015, Coffee Break</h5>
 
-    <h5 class="text-heading text-center">1015-1215, Session II: Security and Data Operations</h5>
+    <h5 class="text-gray text-center">1015-1215, Session II: Security and Data Operations</h5>
     <p class="sample-text"><b>Session Chair</b>: Dr. Raúl Gracia-Tinedo</p>
 
-    <h5 class="text-heading text-center">1215-1315, Lunch Break</h5>
+    <h5 class="text-gray text-center">1215-1315, Lunch Break</h5>
 
-    <h5 class="text-heading text-center">1315-1400, Session III: Keynote</h5>
+    <h5 class="text-gray text-center">1315-1400, Session III: Keynote</h5>
     <p class="sample-text"><b>Session Chair</b>: Dr. Ahmed Khalid</p>
     <p class="sample-text"><b>Title:</b> Life on the Edge: Experiences with Enabling AI</p>
     <p class="sample-text"><b>Speaker:</b> Prof. Cormac J. Sreenan, University College Cork, Ireland</p>
 
-    <h5 class="text-heading text-center">1400-1500, Session IV: Posters and Networking over Coffee</h5>
+    <h5 class="text-gray text-center">1400-1500, Session IV: Posters and Networking over Coffee</h5>
 
-    <h5 class="text-heading text-center">1500-1700, Session V: CEC Architectures & Resource Management </h5>
+    <h5 class="text-gray text-center">1500-1700, Session V: CEC Architectures & Resource Management </h5>
     <p class="sample-text"><b>Session Chair</b>: Alan Barnett</p>
 
   </div>
