--- a/index.html
+++ b/index.html
@@ -312,8 +312,6 @@
 	<b>Title:</b> Project Alvarium and the Rise of Data Confidence Fabrics <br>
 	<b>Speaker:</b> Steve J. Todd, Fellow at Dell Technologies <br>
 	</p>
-    <p class="sample-text"><b>Title:</b> Project Alvarium and the Rise of Data Confidence Fabrics</p>
-    <p class="sample-text"><b>Speaker:</b> Steve J. Todd, Fellow at Dell Technologies</p>
 	
 	<h5 class="text-gray text-center">1000-1015, Coffee Break</h5>
 
@@ -323,9 +321,11 @@
     <h5 class="text-gray text-center">1215-1315, Lunch Break</h5>
 
     <h5 class="text-gray text-center">1315-1400, Session III: Keynote</h5>
-    <p class="sample-text"><b>Session Chair</b>: Dr. Ahmed Khalid</p>
-    <p class="sample-text"><b>Title:</b> Life on the Edge: Experiences with Enabling AI</p>
-    <p class="sample-text"><b>Speaker:</b> Prof. Cormac J. Sreenan, University College Cork, Ireland</p>
+    <p class="sample-text">
+	<b>Session Chair</b>: Dr. Ahmed Khalid <br>
+	<b>Title:</b> Life on the Edge: Experiences with Enabling AI <br>
+	<b>Speaker:</b> Prof. Cormac J. Sreenan, University College Cork, Ireland <br>
+	</p>
 
     <h5 class="text-gray text-center">1400-1500, Session IV: Joint Coffee Break and Poster Session</h5>
 
