--- a/index.html
+++ b/index.html
@@ -304,13 +304,14 @@
 
 <section class="sample-text-area">
   <div class="container">
+  
     <h5 class="text-gray text-center">0900-0910, Opening</h5>
 
     <h5 class="text-gray text-center">0910-1000, Session I: Keynote</h5>
     <p class="sample-text">
 	<b>Session Chair</b>: Dr. Ahmed Khalid <br>
 	<b>Title:</b> Project Alvarium and the Rise of Data Confidence Fabrics <br>
-	<b>Speaker:</b> Steve J. Todd, Fellow at Dell Technologies <br>
+	<b>Speaker:</b> Steve J. Todd, Fellow at Dell Technologies
 	</p>
 	
 	<h5 class="text-gray text-center">1000-1015, Coffee Break</h5>
@@ -324,7 +325,7 @@
     <p class="sample-text">
 	<b>Session Chair</b>: Dr. Ahmed Khalid <br>
 	<b>Title:</b> Life on the Edge: Experiences with Enabling AI <br>
-	<b>Speaker:</b> Prof. Cormac J. Sreenan, University College Cork, Ireland <br>
+	<b>Speaker:</b> Prof. Cormac J. Sreenan, University College Cork, Ireland
 	</p>
 
     <h5 class="text-gray text-center">1400-1500, Session IV: Joint Coffee Break and Poster Session</h5>
