--- a/index.html
+++ b/index.html
@@ -318,6 +318,14 @@
 
     <h5 class="text-gray text-center">1015-1215, Session II: Security and Data Operations</h5>
     <p class="sample-text"><b>Session Chair</b>: Dr. Raúl Gracia-Tinedo</p>
+    <p class="sample-text">
+	<b>1015-1035</b>: Towards Trust-based Data Weighting in Machine Learning <br>
+	<b>1035-1055</b>: Architecture for Confidential Digital Asset Transfer on Blockchain through Obfuscation <br>
+	<b>1055-1115</b>: Semantic Programming for IoT-Edge-Cloud Continuum <br>
+	<b>1115-1135</b>: Augmented Reality Integration for Real-time Security and Maintenance in IoT-enabled Smart Campuses <br>
+	<b>1135-1155</b>: Lightweight network-based IoT device authentication in Cloud services <br>
+	<b>1155-1215</b>: Topology-aware Cognitive Self-protection Framework for Automated Detection and Mitigation of Security and Privacy Incidents in 5G-IoT Networks
+	</p>
 
     <h5 class="text-gray text-center">1215-1315, Lunch Break</h5>
 
@@ -332,6 +340,14 @@
 
     <h5 class="text-gray text-center">1500-1700, Session V: CEC Architectures & Resource Management </h5>
     <p class="sample-text"><b>Session Chair</b>: Alan Barnett</p>
+    <p class="sample-text">
+	<b>1500-1520</b>: The Nanoservices Framework: Co-locating Microservices in the Cloud-Edge Continuum <br>
+	<b>1520-1540</b>: Hardware-Accelerated FaaS for the Edge-Cloud Continuum <br>
+	<b>1540-1600</b>: An AI Factory Digital Twin Deployed Within a High-Performance Edge Architecture <br>
+	<b>1600-1620</b>: Is Performance of Object Storage Predictable for Serverless I/O Workloads? A Comparative Study <br>
+	<b>1620-1640</b>: Performance and Energy Savings Trade-Off with Uncertainty-Aware Cloud Workload Forecasting <br>
+	<b>1640-1700</b>: An RL-based Model for Optimized Kubernetes Scheduling
+	</p>
 
   </div>
 
