--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 	<b>Speaker:</b> Prof. Cormac J. Sreenan, University College Cork, Ireland
 	</p>
 
-    <h5 class="text-gray text-center">1400-1500, Session IV: Joint Coffee Break and Poster Session</h5>
+    <h5 class="text-gray text-center">1400-1500, Session IV: Coffee Break & Posters</h5>
 
     <h5 class="text-gray text-center">1500-1700, Session V: CEC Architectures & Resource Management </h5>
     <p class="sample-text"><b>Session Chair</b>: Alan Barnett</p>
