--- a/index.html
+++ b/index.html
@@ -337,6 +337,23 @@
 	</p>
 
     <h5 class="text-gray text-center">1400-1500, Session IV: Coffee Break & Posters</h5>
+    <p class="sample-text">
+	<b>CLEVER</b>: Collaborative edge-cLoud continuum and Embedded AI for a Visionary industry of thE futuRe <br>
+	<b>INTEND</b>: Intent-Based Data Operation In The Computing Continuum <br>
+	<b>GLACIATION</b>: Green responsibLe privACy preservIng dAta operaTIONs <br>
+	<b>CloudSkin</b>: Adaptive virtualization for AI-enabled Cloud-edge Continuum <br>
+	<b>NearData</b>: Extreme Near-Data Processing Platform <br>
+	<b>CAMEO</b>: Creating an Architecture for Manipulating Earth Observation data
+	</p>
+
+	<p class="sample-text">
+    <ul class="unordered-list">
+    <li>Collaborative edge-cLoud continuum and Embedded AI for a Visionary industry of thE futuRe</li>
+    <li>Intent-Based Data Operation In The Computing Continuum</li>
+    <li>Intent-Based Data Operation In The Computing Continuum</li>
+    <li>Intent-Based Data Operation In The Computing Continuum</li>
+    </ul>
+    </p>
 
     <h5 class="text-gray text-center">1500-1700, Session V: CEC Architectures & Resource Management </h5>
     <p class="sample-text"><b>Session Chair</b>: Alan Barnett</p>
