--- a/index.html
+++ b/index.html
@@ -287,9 +287,6 @@
   </div>
 </section>
 
-<section class="price-area section-gap">
-</section>
-
 <section class="price-area" id="program">
   <div class="container">
     <div class="row d-flex justify-content-center">
@@ -299,12 +296,50 @@
         </div>
       </div>
     </div>
+	    <div class="row">
+      <div class="col-lg-3 col-md-6 single-price">
+        <div class="top-part">
+          <h1 class="package-no">S1</h1>
+          <h4>0900-1000</h4>
+          <p>Keynote</p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 single-price">
+        <div class="top-part">
+          <h1 class="package-no">S2</h1>
+          <h4>1015-12-15</h4>
+          <p>Security and Data Operations</p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 single-price">
+        <div class="top-part">
+          <h1 class="package-no">S3</h1>
+          <h4>1315-1400</h4>
+          <p>Keynote</p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 single-price">
+        <div class="top-part">
+          <h1 class="package-no">S4</h1>
+          <h4>1400-1500</h4>
+          <p>Posters</p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6 single-price">
+        <div class="top-part">
+          <h1 class="package-no">S5</h1>
+          <h4>1500-1700</h4>
+          <p>CEC Architectures & Resource Management</p>
+        </div>
+      </div>
+    </div>
+
   </div>
 </section>
 
 <section class="sample-text-area">
   <div class="container">
-  
+
     <h5 class="text-gray text-center">0900-0910, Opening</h5>
 
     <h5 class="text-gray text-center">0910-1000, Session I: Keynote</h5>
@@ -338,11 +373,11 @@
 
     <h5 class="text-gray text-center">1400-1500, Session IV: Coffee Break & Posters</h5>
     <p class="sample-text">
-	<b>CLEVER</b>: Collaborative edge-cLoud continuum and Embedded AI for a Visionary industry of thE futuRe <br>
+	<b>NearData</b>: Extreme Near-Data Processing Platform <br>
 	<b>INTEND</b>: Intent-Based Data Operation In The Computing Continuum <br>
+	<b>CLEVER</b>: Collaborative edge-cLoud continuum and Embedded AI for a Visionary industry of thE futuRe <br>
 	<b>GLACIATION</b>: Green responsibLe privACy preservIng dAta operaTIONs <br>
 	<b>CloudSkin</b>: Adaptive virtualization for AI-enabled Cloud-edge Continuum <br>
-	<b>NearData</b>: Extreme Near-Data Processing Platform <br>
 	<b>CAMEO</b>: Creating an Architecture for Manipulating Earth Observation data
 	</p>
 
