--- a/index.html
+++ b/index.html
@@ -297,35 +297,35 @@
       </div>
     </div>
 	    <div class="row">
-      <div class="col-lg-3 col-md-6 single-price">
+      <div class="single-price">
         <div class="top-part">
           <h1>S1</h1>
           <h4>0900-1000</h4>
           <p>Keynote</p>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 single-price">
+      <div class="single-price">
         <div class="top-part">
           <h1>S2</h1>
-          <h4>1015-12-15</h4>
+          <h4>1015-1215</h4>
           <p>Security and Data Operations</p>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 single-price">
+      <div class="single-price">
         <div class="top-part">
           <h1>S3</h1>
           <h4>1315-1400</h4>
           <p>Keynote</p>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 single-price">
+      <div class="single-price">
         <div class="top-part">
           <h1>S4</h1>
           <h4>1400-1500</h4>
           <p>Posters</p>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 single-price">
+      <div class="single-price">
         <div class="top-part">
           <h1>S5</h1>
           <h4>1500-1700</h4>
