--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
   </div>
 </section>
 
-<section class="price-area" id="program">
+<section class="price-area section-gap" id="program">
   <div class="container">
     <div class="row d-flex justify-content-center">
       <div class="menu-content pb-70 col-md-8">
@@ -297,35 +297,35 @@
       </div>
     </div>
 	    <div class="row">
-      <div class="single-price">
+      <div class="col single-price">
         <div class="top-part">
           <h1 class="package-no">S1</h1>
           <h4>0900-1000</h4>
           <p>Keynote</p>
         </div>
       </div>
-      <div class="single-price">
+      <div class="col single-price">
         <div class="top-part">
           <h1 class="package-no">S2</h1>
           <h4>1015-1215</h4>
           <p>Security and Data Operations</p>
         </div>
       </div>
-      <div class="single-price">
+      <div class="col single-price">
         <div class="top-part">
           <h1 class="package-no">S3</h1>
           <h4>1315-1400</h4>
           <p>Keynote</p>
         </div>
       </div>
-      <div class="single-price">
+      <div class="col single-price">
         <div class="top-part">
           <h1 class="package-no">S4</h1>
           <h4>1400-1500</h4>
           <p>Posters</p>
         </div>
       </div>
-      <div class="single-price">
+      <div class="col single-price">
         <div class="top-part">
           <h1 class="package-no">S5</h1>
           <h4>1500-1700</h4>
